# dkg.py

./: .flake8  CONTRIBUTIONS.md  LICENSE  NOTICE  README.md  demo.py  pyproject.toml
dkg/: __init__.py  assertion.py  asset.py  assets.py  constants.py  dataclasses.py  exceptions.py  graph.py  main.py  manager.py  method.py  module.py  network.py  node.py  paranet.py  types.py
dkg/_utils/: blockchain.py  blockchain_request.py  node_request.py  string_transformations.py  ual.py
dkg/data/: default-config.yaml
dkg/data/interfaces/: Assertion.json  AssertionStorage.json  CommitManagerV1.json  CommitManagerV1U1.json  ContentAsset.json  ContentAssetStorage.json  ERC20Token.json  HashingProxy.json  Hub.json  Identity.json  IdentityStorage.json  ParametersStorage.json  Paranet.json  ParanetIncentivesPoolFactory.json  ParanetKnowledgeMinersRegistry.json  ParanetNeurowebIncentivesPool.json  ParanetsRegistry.json  Profile.json  ProfileStorage.json  ProofManagerV1.json  ProofManagerV1U1.json  ScoringProxy.json  ServiceAgreementStorageProxy.json  ServiceAgreementStorageV1.json  ServiceAgreementStorageV1U1.json  ServiceAgreementV1.json  ShardingTable.json  ShardingTableStorage.json  Staking.json  StakingStorage.json  Token.json  UnfinalizedStateStorage.json  WhitelistStorage.json
dkg/providers/: __init__.py  blockchain.py  node_http.py
dkg/types/: __init__.py  blockchain.py  dkg_node.py  encoding.py  evm.py  general.py  generics.py  graph.py  network.py  rdf.py
dkg/utils/: blockchain_request.py  decorators.py  merkle.py  metadata.py  node_request.py  rdf.py  string_transformations.py  ual.py
examples/: curated_paranets_demo.py  demo.py  paranets_demo.py
