[tool.poetry]
name = "dkg"
version = "0.0.1-beta"
description = ""
authors = ["Uladzislau Hubar <hubar.uladzislau@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
web3 = "^6.0.0"
pandas = "^1.5.3"
eth-account = "^0.8.0"
pyld = {git = "https://github.com/u-hubar/pyld.git"}
rdflib = "^6.3.2"
hexbytes = "^0.3.0"
eth-abi = "^4.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
