[tool.poetry]
name = "dkg"
version = "1.1.0"
description = "Python library for interacting with the OriginTrail Decentralized Knowledge Graph"
authors = ["Uladzislau Hubar <hubar.uladzislau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
web3 = "^6.19.0"
pandas = "^1.5.3"
eth-account = "^0.11.0"
rdflib = "^6.3.2"
hexbytes = "^0.3.0"
eth-abi = "^5.0.1"
ot-pyld = "^2.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tools.setuptools]
packages = ["dkg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
